# bendover

./: .env.example  .gitignore  Bendover.sln  Dockerfile  Mystro.sln  README.md  bendover  bendover.code-workspace  issues.md  mystro  pyproject.toml  setup.sh
.bendover/agents/: engineer.md  lead.md
.bendover/practices/: agent_orchestration_flow.md  clean_interfaces.md  codebase_overview.md  coding_style.md  composition_root_di.md  external_io_abstractions.md  lead.md  onion_architecture.md  promptopt_context_and_bundles.md  readme_hygiene.md  tdd_spirit.md
.mystro/practices/: codebase_overview.md  composition_root_di.md  readme_hygiene.md
docs/: application.md  promptopt.md
docs/repro/: story_01_script_runner.md  story_02_validator.md  story_03_sdk_facade.md  story_04_sandbox_exec.md  story_05_retries.md  story_06_artifacts.md  story_07_patch_apply.md
promptopt/: gepa_driver.py  requirements.txt  run_gepa.py
promptopt/tests/: test_gepa.py  verify_refactor.py
src/Bendover.Application/: AgentEventPublisher.cs  AgentOrchestrator.cs  AgentPromptService.cs  Bendover.Application.csproj  BendoverPaths.cs  Class1.cs  EngineerBodyValidator.cs  IPromptBundleResolver.cs  LeadAgent.cs  PracticeService.cs  PromptBundleResolver.cs  ScriptGenerator.cs  Services.cs
src/Bendover.Domain/: AgentRole.cs  Bendover.Domain.csproj  Class1.cs  Entities.cs  ILeadAgent.cs  IPracticeService.cs  Interfaces.cs  Practice.cs
src/Bendover.Infrastructure/: Bendover.Infrastructure.csproj  ChatClientResolver.cs  Class1.cs  DockerContainerService.cs  DockerEnvironmentValidator.cs  (+3 more)
(+422 files in other folders)
